# aoc

./: .gitignore  README.md  pyproject.toml
2021/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day7.ipynb  day8.ipynb  day9.ipynb
aoc_tools/: __main__.py
solutions/2021/: day10.ipynb  day11.ipynb  day2.ipynb  day4.ipynb  day6.ipynb  day8.ipynb
solutions/2024/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb
