[tool.poetry]
name = "aoc-tools"
version = "0.1.0"
description = ""
authors = ["Luis Bañuelos <luiscarlos.banuelos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
typer = "^0.14.0"
rich = "^13.9.4"
platformdirs = "<4.0"
requests = "^2.32.3"
nbformat = "^5.10.4"
bidict = "^0.23.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
euporie = "^2.8.4"
numpy = "^2.1.3"
ipython = "^8.30.0"

[tool.poetry.scripts]
aoc = "aoc_tools.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
